--- a/static/index.html
+++ b/static/index.html
@@ -8,30 +8,44 @@
     <div class="h-full w-full flex flex-wrap justify-center content-center gap-20">
 
         <!-- <div
-            class="flex flex-col h-3/4 w-3/5 p-6 my-3 bg-gradient-to-tr from-sky-800/40 to-teal-800/40 shadow-sm border border-slate-400 rounded-lg">
-            <div class="w-full h-full my-4" id="chart"></div>
+            class="flex flex-col h-4/5 w-4/5 p-6 my-3 bg-gradient-to-tr from-sky-800/40 to-teal-800/40 shadow-sm border border-slate-400 rounded-lg">
 
-            <div class="grid w-1/2 self-center grid-rows-2 grid-cols-3 gap-x-4 gap-y-2">
-                <input
-                    class="w-40 bg-transparent placeholder:text-slate-300 text-slate-200 text-sm border border-slate-200 rounded-md px-3 py-2 ease transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-300 shadow-sm focus:shadow"
-                    type="number" id="meanX" placeholder="meanX">
-                <input
-                    class="w-40 bg-transparent placeholder:text-slate-300 text-slate-200 text-sm border border-slate-200 rounded-md px-3 py-2 ease transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-300 shadow-sm focus:shadow"
-                    type="number" id="sigmaX" placeholder="sigmaX">
-                <input
-                    class="w-40 bg-transparent placeholder:text-slate-300 text-slate-200 text-sm border border-slate-200 rounded-md px-3 py-2 ease transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-300 shadow-sm focus:shadow"
-                    type="number" id="samples" placeholder="samples">
-                <input
-                    class="w-40 bg-transparent placeholder:text-slate-300 text-slate-200 text-sm border border-slate-200 rounded-md px-3 py-2 ease transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-300 shadow-sm focus:shadow"
-                    type="number" id="meanY" placeholder="meanY">
-                <input
-                    class="w-40 bg-transparent placeholder:text-slate-300 text-slate-200 text-sm border border-slate-200 rounded-md px-3 py-2 ease transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-300 shadow-sm focus:shadow"
-                    type="number" id="sigmaY" placeholder="sigmaY">
-                <button class="w-40 bg-transparent  text-slate-200 text-sm border border-slate-200 rounded-md px-3 py-2"
-                    id="gaussian2dUpdate">Update</button>
+            <div class="grid h-full w-full justify-center grid-rows-1 grid-cols-2 gap-8">
+                <div class="treemap">
+                    <div class="w-full h-full my-4" id="treemapplot"></div>
+                </div>
 
+                <div class="gaussplot">
+                    <div class="w-full h-3/5 my-8" id="gaussplot"></div>
+
+                    <div class="grid w-full h-28 grid-rows-2 grid-cols-3 gap-x-4 gap-y-2">
+                        <input
+                            class="w-full bg-transparent placeholder:text-slate-300 text-slate-200 text-sm border border-slate-200 rounded-md px-3 py-2 ease transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-300 shadow-sm focus:shadow"
+                            type="number" id="meanX" placeholder="meanX">
+                        <input
+                            class="w-full bg-transparent placeholder:text-slate-300 text-slate-200 text-sm border border-slate-200 rounded-md px-3 py-2 ease transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-300 shadow-sm focus:shadow"
+                            type="number" id="sigmaX" placeholder="sigmaX">
+                        <input
+                            class="w-full bg-transparent placeholder:text-slate-300 text-slate-200 text-sm border border-slate-200 rounded-md px-3 py-2 ease transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-300 shadow-sm focus:shadow"
+                            type="number" id="samples" placeholder="samples">
+                        <input
+                            class="w-full bg-transparent placeholder:text-slate-300 text-slate-200 text-sm border border-slate-200 rounded-md px-3 py-2 ease transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-300 shadow-sm focus:shadow"
+                            type="number" id="meanY" placeholder="meanY">
+                        <input
+                            class="w-full bg-transparent placeholder:text-slate-300 text-slate-200 text-sm border border-slate-200 rounded-md px-3 py-2 ease transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-300 shadow-sm focus:shadow"
+                            type="number" id="sigmaY" placeholder="sigmaY">
+                        <button
+                            class="w-full bg-transparent  text-slate-200 text-sm border border-slate-200 rounded-md px-3 py-2"
+                            id="gaussian2dUpdate">Update</button>
+
+                    </div>
+
+                    <div class="cell-div mt-8" cellid="2e287869-a591-45ba-ac12-28c24fd9059a">
+
+                </div>
             </div>
         </div> -->
+
 
         <div
             class="flex flex-col my-3 bg-gradient-to-tr from-sky-800/40 to-teal-800/40 shadow-sm border border-slate-400 rounded-lg w-3/5">
@@ -54,7 +68,7 @@
                 </div>
 
             </div>
-        </div> 
+        </div>
 
         <div
             class="flex flex-col my-3 bg-gradient-to-tr from-sky-800/50 to-teal-800/50 shadow-sm border border-slate-400 rounded-lg w-3/5">
@@ -79,8 +93,6 @@
 
             </div>
         </div>
-
-
 
 
     </div>
